тз:4. итерация:2. Исправлены замечания